Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-Aug-2012 Rouven Weßling
 + Import unit tests for JHtmlBatch from the platform.

25-Aug-2012 Mark Dexter
 + Unit test framework for CMS. Thanks Michael.

20-Aug-2012 Rouven Weßling
 + Add setup for unit testing. Thanks Michael.

24-Aug-2012 Mark Dexter
 # Fix first batch of system tests for 3.0 with Bootstrap templates
 # Fix two more system tests

30-Jul-2012 Mark Dexter
 ^ Add ability to capture screenshots on failure for system tests

09-Jul-2012 Mark Dexter
 ^ Detect notices in modals and popups

05-Jul-2012 Mark Dexter
 # Fix installation to chmod configuration before delete

30-Jun-2012 Mark Dexter
 # More fixes for Selenium RC2 -- don't use TinyMCE for tests

26-Jun-2012 Mark Dexter
 # Fixes for Selenium RC2 and Google Chrome browser

18-Jun-2012 Mark Dexter
 ^ Update phpunit.php for debugging system tests

05-May-2012 Mark Dexter
 ^ Update phpunit.php for PHPUnit version 3.5

04-May-2012 Mark Dexter
 # Fix PHP strict error

02-May-2012 Mark Dexter
 ^ Change system test suite to work with PHPUnit version 3.6
 # Fix doInstall for PHP strict error

12-Apr-2012 Mark Dexter
 # Fix hard-coded version number in system test

10-Feb-2012 Mark Dexter
 # Clear cache after system tests
 + Add Module0002 test

17-Jan-2012 Mark Dexter
 # Fix failing system tests for sample data changes

16-Jan-2012 Mark Dexter
 # Fix failing system test for Control Panel change

21-Dec-2011 Mark Dexter
 # Fix failing system test for sample data change

18-Dec-2011 Mark Dexter
 # Change link name for read private messages

16-Dec-2011 Mark Dexter
 # Fix failing system tests (for menu type changes in trunk)

12-Nov-2011 Mark Dexter
 + Added system test to test modals in front-end article edit

06-Nov-2011 Mark Dexter